Apply suggestion from code review

--- a/.github/workflows/storage-compatibility-check.yaml
+++ b/.github/workflows/storage-compatibility-check.yaml
@@ -10,7 +10,7 @@ on:
         default: 'master'
 
 env:
-  AWS_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY }}
+  AWS_ACCESS_KEY_ID: AKIA4ANSBD3UR5JBJIHH
   AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_ACCESS_KEY }}
   S3_REGION: us-east-1
   S3_BUCKET_NAME: s3-scalardl-test-bucket
