Use Java Toolchain

--- a/build.gradle
+++ b/build.gradle
@@ -91,8 +91,11 @@ subprojects {
         useJUnitPlatform()
     }
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(8)
+        }
+    }
 
     distZip {
         archiveFileName = "${project.name}.zip"
