--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -145,6 +145,33 @@ task integrationTestMysql(type: Test) {
     }
 }
 
+task integrationTestMysqlConsensusCommit(type: Test) {
+    useJUnitPlatform()
+    description 'Runs the integration tests with Consensus Commit transaction manager on MySQL.'
+    group 'verification'
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    outputs.upToDateWhen { false } // ensures integration tests are run every time when called
+    shouldRunAfter test
+    options {
+        systemProperty('scalardb.storage', 'jdbc')
+        systemProperty('scalardb.contact_points', 'jdbc:mysql://localhost/')
+        systemProperty('scalardb.username', 'root')
+        systemProperty('scalardb.password', 'mysql')
+        systemProperties(System.getProperties().findAll{it.key.toString().startsWith("scalar")})
+    }
+}
+
+task permissionTest(type: Test) {
+    useJUnitPlatform()
+    description 'Runs the permission tests.'
+    group 'verification'
+    testClassesDirs = sourceSets.permissionTest.output.classesDirs
+    classpath = sourceSets.permissionTest.runtimeClasspath
+    outputs.upToDateWhen { false } // ensures permission tests are run every time when called
+    shouldRunAfter test
+}
+
 task integrationTest(type: Test) {
     dependsOn integrationTestCassandra
     dependsOn integrationTestDynamo
