Upgrade JaCoCo to 0.8.12 for Java 21 support

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ subprojects {
     group = projectGroup
     project.version = projectVersion
 
+    jacoco {
+        toolVersion = '0.8.12'
+    }
+
     ext {
         grpcVersion = '1.78.0'
         protocVersion = '3.25.8'
