--- a/.github/workflows/scalar.yml
+++ b/.github/workflows/scalar.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Run integration tests
         run: >-
-          ./gradlew :ledger:integrationTestMysqlConsensusCommit
+          ./gradlew :ledger:integrationTest
           -Dscalardb.storage=jdbc
           -Dscalardb.contact_points=jdbc:mysql://localhost/
           -Dscalardb.username=root
@@ -109,7 +109,7 @@ jobs:
 
       - name: Run integration tests
         run: >-
-          ./gradlew :ledger:integrationTestMysql
+          ./gradlew :ledger:integrationTest
           -Dscalardb.storage=jdbc
           -Dscalardb.contact_points=jdbc:mysql://localhost/
           -Dscalardb.username=root
